--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 1.10 UNRELEASED
-  * add support for attachments
+  * see if we can load new attachment data asynchronously.
+
+1.02 2008-09-15
+  - added documentation for attach and detatch
+  - added document length to new attachment stubs
+
+1.01 2008-09-14
+  - add support for attachments
   - mention DB::CouchDB in POD
 
 1.00 2008-07-25
